# projects

./: .gitignore  .pre-commit-config.yaml
.github/workflows/: safety-checks.yaml
domo-job-scraper/: pyproject.toml
domo-job-scraper/scripts/: bootstrap_job_search_channel.py
domo-job-scraper/src/job_search/: __init__.py  __main__.py  config.py  interfaces.py  manifest.py  pipeline.py  poster.py  runner.py  scraper.py  slack_command.py
domo-job-scraper/src/job_search/adapters/: __init__.py  jobspy_scraper.py  slack_poster.py  sqlite_manifest.py
domo-job-scraper/tests/: test_job_search_pipeline.py
voice-to-mermaid/: README.md
voice-to-mermaid/.agents/runbooks/generate-samples/: SKILL.md
voice-to-mermaid/.agents/runbooks/generate-samples/data/: career_map.mmd  preview.html  resume.md  sizzle_reel.html  sizzle_reel.md
voice-to-mermaid/.agents/runbooks/generate-samples/prompts/: marp.txt  mermaid.txt
voice-to-mermaid/.agents/runbooks/generate-samples/scripts/: generate_marp.py  generate_mermaid.py
voice-to-mermaid/.agents/runbooks/start-voice-to-mermaid/: SKILL.md
voice-to-mermaid/backend/: .env.example  Dockerfile  config.yaml  docker-compose.yml  main.py  requirements.stt.txt  requirements.txt
voice-to-mermaid/backend/data/logs/: diagram_generations.jsonl
voice-to-mermaid/backend/prompts/: marp.txt  mermaid.txt
voice-to-mermaid/frontend/: .env.example  next.config.ts  package-lock.json  package.json
voice-to-mermaid/frontend/src/app/: globals.css  layout.tsx  page.tsx
voice-to-mermaid/frontend/src/components/: VoiceToMermaid.tsx
(+1 files in other folders)
